refactor: Backend: - reduce unnecessary dto seperated class with inner static class - use query builder in vendor repository and add search scope to query - fix missing brand and category base url attachment in product response Frontend: - Enhanced UI on ProductPage - fix missing border radius on admin modal popup